{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Move",
            "id": "9c82956e-b79e-44e0-bea5-537d6f43d1cc",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "Button",
                    "id": "6c5f36a4-f944-4553-8b6f-8aa9d88c9cc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b8ccb582-b301-4ce4-adef-822cc0cd5d36",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d18febc9-73bb-4684-91dc-258ef8e7e429",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef276eb4-70fc-4fdf-ab6a-cb78da8c066c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}